# exhaleedit

./: .gitignore  CMakeLists.txt  README.md  exhale_vs2012.sln  makefile
include/: exhaleDecl.h  styles.css  version.h
src/: makefile.base
src/app/: CMakeLists.txt  basicMP4Writer.cpp  basicMP4Writer.h  basicWavReader.txt  exhaleAppPch.cpp  exhaleAppPch.h  exhaleApp_vs2012.vcxproj  exhaleApp_vs2012.vcxproj.filters  loudnessEstim.cpp  loudnessEstim.h  makefile
src/lib/: CMakeLists.txt  bitAllocation.cpp  bitAllocation.h  exhaleEnc.cpp  exhaleEnc.h  exhaleLibPch.cpp  exhaleLib_vs2012.vcxproj  exhaleLib_vs2012.vcxproj.filters  lappedTransform.cpp  lappedTransform.h  linearPrediction.cpp  linearPrediction.h  makefile  quantization.h  stereoProcessing.cpp  stereoProcessing.h  tempAnalysis.cpp  tempAnalysis.h
